--- a/package.json
+++ b/package.json
@@ -12,11 +12,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.5",
     "@nuxtjs/color-mode": "^3.0.3",
     "@nuxtjs/eslint-config-typescript": "^10.0.0",
     "@nuxtjs/tailwindcss": "^5.1.2",
-    "@unocss/nuxt": "^0.34.1",
     "eslint": "^8.16.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^3.2.0",
@@ -24,5 +22,11 @@
     "eslint-plugin-tailwindcss": "^3.5.0",
     "nuxt": "3.0.0-rc.3",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5"
   }
 }
