--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,16 @@
     "plugin:prettier/recommended",
     "plugin:tailwindcss/recommended"
   ],
-
   "rules": {
     "vue/multi-word-component-names": 0,
     // "vue/no-multiple-template-root": 0,
-    "prettier/prettier": ["error", { "singleQuote": true, "printWidth": 120 }]
+    "prettier/prettier": [
+      "error",
+      {
+        "singleQuote": true,
+        "printWidth": 120,
+        "endOfLine": "lf"
+      }
+    ]
   }
 }
