--- a/package.json
+++ b/package.json
@@ -12,21 +12,21 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@nuxtjs/color-mode": "^3.1.4",
-    "@nuxtjs/eslint-config-typescript": "^10.0.0",
-    "@nuxtjs/tailwindcss": "^5.3.2",
-    "eslint": "^8.22.0",
+    "@nuxtjs/color-mode": "^3.1.6",
+    "@nuxtjs/eslint-config-typescript": "^11.0.0",
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-nuxt": "^3.2.0",
+    "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-tailwindcss": "^3.6.0",
-    "nuxt": "3.0.0-rc.8",
+    "eslint-plugin-tailwindcss": "^3.6.2",
+    "nuxt": "3.0.0-rc.11",
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.2",
-    "@fortawesome/free-brands-svg-icons": "^6.1.2",
-    "@fortawesome/free-solid-svg-icons": "^6.1.2",
-    "@fortawesome/vue-fontawesome": "^3.0.0-5"
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fortawesome/vue-fontawesome": "^3.0.1"
   }
 }
